--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -156,7 +156,7 @@
                     <a class="item " [routerLink]="[ '/int06/9'] " *ngIf="authService.renderByPage('int06/9')" routerLinkActive="active "> บันทึกข้อมูลรับโอนเงิน</a>
                     <a class="item " [routerLink]="[ '/int06/10'] " *ngIf="authService.renderByPage('int06/10')" routerLinkActive="active ">บันทึกข้อมูลเบิกจ่าย</a>
                     <a class="item " [routerLink]="[ '/int06/5'] " *ngIf="authService.renderByPage('int06/5')" routerLinkActive="active "> ทะเบียนคุมเช็ค</a>
-                    <a class="item " [routerLink]="[ '/int06/6'] " *ngIf="authService.renderByPage('int06/6')" routerLinkActive="active ">ทะเบียนคุม KTB - Coperate</a>
+                    <a class="item " [routerLink]="[ '/int06/6'] " *ngIf="authService.renderByPage('int06/6')" routerLinkActive="active ">ทะเบียนคุม KTB - Corporate</a>
                     <!-- <a class="item " [routerLink]="[ '/int06/3'] " *ngIf="authService.renderByPage('int06/3')"
                         routerLinkActive="active ">กระดาษทำการตรวจสอบวันปฏิบัติงาน</a>
                         <a class="item " [routerLink]="[ '/int06/7'] "  *ngIf="authService.renderByPage('int06/3')"
