--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-6/int06-11-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-6/int06-11-6.component.html
@@ -1,8 +1,6 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <br>
 <div class="sixteen wide column">
-  <h2 class="ui header">ติดตามผลขอเบิก ขอจ่าย</h2>
-
   <div class="ui top centered attached header segment" style="background: #1e83db;color: white;">
     <span>ระบุเงื่อนไขในการค้นหา</span>
   </div>
@@ -35,7 +33,6 @@
     </div>
   </form>
   <br>
-  <br>
   <div class="ui top centered attached header segment" style="background: #1e83db;color: white;">
     <span>ผลการค้นหา</span>
   </div>
@@ -62,7 +59,7 @@
   <div id="segmentApprove">
     <br>
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white;">
-      <span>รายละเอียดเปลียบเทียบใบ ขอเบิก ขอจ่าย</span>
+      <span>รายละเอียดเปรียบเทียบใบ ขอเบิก ขอจ่าย</span>
     </div>
     <div class="ui form">
       <div class="ui attached segment">
