--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3-01/int06-11-3-01.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3-01/int06-11-3-01.component.html
@@ -1,14 +1,15 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
   <div class="sixteen wide column">
-    <div class="ui top  attached header segment" style="background: #1e83db;color: white">
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
       <span>บันทึกคำขอเบิกเงินสวัสดิการเกี่ยวกับการศึกษาบุตร (แบบ 7223)</span>
     </div>
     <!-- form upload -->
     <div class="ui attached center {{loading ? 'loading' : ''}} segment">
       <form class="ui form" id="upload-form" (submit)="onSubmit($event)" ngNativeValidate>
-        <div class="inline fields ui centered grid">
-          <div class="two wide field">
+        <div class="inline fields ui grid">
+          <div class="six wide field"></div>
+          <div class="one wide field">
             <label class="text-right full-width">จำนวนบุตร</label>
           </div>
           <div class="three wide field ">
