--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -153,7 +153,7 @@
                         </div>
                     </div> -->
                     <a class="item " [routerLink]="[ '/int06/11'] " *ngIf="authService.renderByPage('int06/11')" routerLinkActive="active"> บันทึกคำขอเบิก</a>
-                    <a class="item " [routerLink]="[ '/int06/11/5'] " *ngIf="authService.renderByPage('int06/11/5')" routerLinkActive="active"> สร้างใบขอเบิก</a>
+                    <a class="item " [routerLink]="[ '/int06/11/5'] " *ngIf="authService.renderByPage('int06/11/5')" routerLinkActive="active"> ตรวจสอบหลักฐานการเบิก</a>
                     <a class="item " [routerLink]="[ '/int06/11/6'] " *ngIf="authService.renderByPage('int06/11/6')" routerLinkActive="active"> ติดตามผลขอเบิก ขอจ่าย</a>
                     <a class="item " [routerLink]="[ '/int06/9'] " *ngIf="authService.renderByPage('int06/9')" routerLinkActive="active "> บันทึกข้อมูลรับโอนเงิน</a>
                     <a class="item " [routerLink]="[ '/int06/10'] " *ngIf="authService.renderByPage('int06/10')" routerLinkActive="active ">บันทึกข้อมูลเบิกจ่าย</a>
