--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-9/int06-9.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-9/int06-9.component.html
@@ -116,7 +116,7 @@
     <div class="ui center aligned grid">
         <div class="sixteen wide column">
 
-            <button class="ui mini yellow button">
+      <button class="ui mini yellow button"  (click)="export()">
         <i class="print icon"></i>
         ส่งออก
       </button>
@@ -124,3 +124,7 @@
     </div>
 
 </div>
+<!-- form-data-excel -->
+<form id="form-data-excel" method="POST"> 
+    <input type="hidden" name="dataJson" id="dataJson">
+</form>
